SideBarr styles refactored and z-index bug fixed

--- a/src/components/global-components/side-bar/sideBar.scss
+++ b/src/components/global-components/side-bar/sideBar.scss
@@ -8,12 +8,12 @@
     .sideBar {
         box-sizing: border-box;
         min-width: 250px;
-        max-height: calc(var(--screenHeight) - var(--top));
+        max-height: calc(100vh - 38px);
         background: $lightGrey;
         overflow-y: scroll;
         @include scrollBar;
         position: sticky;
-        top: var(--top);
+        top: 38px;
     }
     .background {
         width: 100%;
@@ -24,16 +24,15 @@
 
 @media only screen and (max-width: 640px) {
     .sideBarWrapper {
+        background: transparent;
         position: absolute;
         left: -100%;
         width: 100%;
         height: 100%;
         display: flex;
+        z-index: 1000;
         &.active {
             left: 0;
-        }
-        .sideBar {
-            z-index: 1000;
         }
     }
 }
